<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Braintree Demo</string>

    <string name="ui_components">UI Components</string>
    <string name="card_fields">Card Fields</string>
    <string name="card_fields_pay">Pay</string>

    <!-- MainActivity -->
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="nonce_placeholder">Nonce: %s</string>
    <string name="is_pay_later_enabled_placeholder">Is Pay Later Selected: %s</string>
    <string name="device_data_placeholder">Device Data: %s</string>
    <string name="google_pay">Google Pay</string>
    <string name="paypal_button">PayPal</string>
    <string name="ideal_button">Pay with iDEAL</string>
    <string name="local_payment_button">Local Payment</string>
    <string name="sepa_direct_debit_button">SEPA Direct Debit</string>
    <string name="cards">Credit or Debit Cards</string>
    <string name="paypal_messaging_button">PayPal Messaging</string>
    <string name="shopper_insights_button">Payment Ready V1</string>
    <string name="shopper_insights_v2_button">Payment Ready V2</string>
    <string name="create_transaction">Create a Transaction</string>
    <string name="loading">Loading…</string>
    <string name="ui_components_compose_button">UI Components Compose</string>

    <!-- PaymentActions -->
    <string name="payment_actions_button">Payment Actions</string>
    <string name="payment_actions_capture_method">Capture Method</string>
    <string name="payment_actions_client_token_placeholder">Client Token: %s…</string>
    <string name="payment_actions_confirmation_method">Confirmation Method</string>
    <string name="payment_actions_create">Create Payment Action</string>
    <string name="payment_actions_creating">Creating payment action…</string>
    <string name="payment_actions_credit_card">Credit Card</string>
    <string name="payment_actions_detail_placeholder">Detail: %s</string>
    <string name="payment_actions_done">Done</string>
    <string name="payment_actions_handle_next_action">Handle Next Action</string>
    <string name="payment_actions_id_placeholder">Payment Action ID: %s</string>
    <string name="payment_actions_select_method">Submit a payment method</string>
    <string name="payment_actions_status_placeholder">Status: %s</string>
    <string name="payment_actions_status_with_server_action_placeholder">Status: %1$s - %2$s</string>
    <string name="payment_actions_submit">Submit</string>

    <!-- CardActivity -->
    <string name="purchase">Purchase</string>

    <!-- CreateTransactionActivity -->
    <string name="processing_transaction">Processing Transaction</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_complete">Transaction Complete</string>

    <!-- Settings -->
    <string name="empty"></string>
    <string name="none">None</string>
    <string name="options">Options</string>
    <string name="sandbox">Sandbox</string>
    <string name="production">Production</string>
    <string name="authorization">Authorization</string>
    <string name="authorization_type">Authorization Type</string>
    <string name="client_token">Client Token</string>
    <string name="tokenization_key">Tokenization Key</string>
    <string name="custom_tokenization_key">Custom Tokenization Key</string>
    <string name="custom_tokenization_key_summary">Custom Tokenization Key: %s</string>
    <string name="customer">Customer</string>
    <string name="customer_summary">The customer id to use</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="empty_merchant_account">Not specifying a merchant account will use the default merchant account. \n\nMerchant Account: %s</string>
    <string name="collect_device_data">Collect Device Data</string>
    <string name="collect_device_data_summary">Collects device data for fraud purposes</string>
    <string name="usd">USD</string>
    <string name="us">US</string>
    <string name="google_pay_require_shipping_address">Require Shipping Address</string>
    <string name="google_pay_require_shipping_address_summary">Require shipping address from the user</string>
    <string name="google_pay_require_phone_number">Require Phone Number</string>
    <string name="google_pay_require_phone_number_summary">Require phone number from the user</string>
    <string name="google_pay_currency_title">Currency</string>
    <string name="google_pay_currency_summary">Must be ISO–4217 format. \n\nCurrency: %s</string>
    <string name="google_pay_allowed_countries_for_shipping_title">Allowed countries for shipping</string>
    <string name="google_pay_allowed_countries_for_shipping_summary">Must be ISO–3166–2, separate by comma for multiple countries. \n\nCountries: %s</string>
    <string name="google_pay_require_billing_address">Require Billing Address</string>
    <string name="google_pay_require_billing_address_summary">Require billing address from the user</string>
    <string name="google_pay_allow_prepaid_cards">Allow Prepaid Cards</string>
    <string name="google_pay_allow_prepaid_cards_summary">Allow the user to use prepaid cards as a payment method</string>
    <string name="google_pay_require_email">Require Email Address</string>
    <string name="google_pay_require_email_summary">Require email address from the user</string>
    <string name="paypal">PayPal</string>
    <string name="paypal_use_hardcoded_configuration">Use Hardcoded Configuration</string>
    <string name="paypal_use_hardcoded_configuration_summary">Use the configuration included in the PayPal SDK instead of downloading new configuration</string>
    <string name="paypal_request_address_scope">Request Address Scope</string>
    <string name="paypal_request_address_scope_summary">Request address scope from the user</string>
    <string name="three_d_secure">3D Secure</string>
    <string name="browser_switch">Browser Switch</string>
    <string name="enable_three_d_secure">Enable 3D Secure</string>
    <string name="enable_three_d_secure_summary">3D Secure will automatically be run on all Card payment methods</string>
    <string name="enable_manual_browser_switching">Enable Manual Browser Switching</string>
    <string name="enable_manual_browser_switching_summary">Use alternate integration pattern to give the Demo app more control over browser switching</string>
    <string name="require_three_d_secure">Require 3D Secure</string>
    <string name="require_three_d_secure_summary">Requires a successful authentication for 3D Secure transactions</string>
    <string name="paypal_checkout_experience">PayPal Checkout Experience</string>
    <string name="paypal_checkout_experience_summary">Show new PayPal checkout experience</string>
    <string name="paypal_disable_signature_verification">Disable app switch signature verification</string>
    <string name="paypal_disable_signature_verification_summary">Allows app switch with a PayPal Wallet app that is not signed</string>
    <string name="paypal_buyer_email_address">Buyer Email Address</string>
    <string name="paypal_phone_country_code">Buyer Phone Country Code</string>
    <string name="paypal_phone_national_number">Buyer Phone National Number</string>
    <string name="paypal_campaign_id">Campaign IDs (comma-separated)</string>
    <string name="paypal_single_payment">Single Payment</string>
    <string name="paypal_single_payment_with_credit">Single Payment With Credit</string>
    <string name="paypal_billing_agreement">Billing Agreement</string>
    <string name="paypal_single_time_pay_later">Single Payment Pay Later</string>
    <string name="paypal_intent_type">Intent Type</string>
    <string name="paypal_landing_page_type">Landing Page Type</string>
    <string name="paypal_intent_authorize">Authorize</string>
    <string name="paypal_intent_order">Order</string>
    <string name="paypal_intent_sale">Sale</string>
    <string name="paypal_display_name">Display Name</string>
    <string name="paypal_display_name_summary">Name to be displayed in the PayPal flow</string>
    <string name="paypal_landing_page_type_billing">Billing</string>
    <string name="paypal_landing_page_type_login">Login</string>
    <string name="venmo">Venmo</string>
    <string name="vault_venmo">Vault Venmo</string>
    <string name="vault_venmo_summary">Vault Venmo payment methods on creation. Requires a customer id to be set.</string>
    <string name="use_app_links_return">Use App Link</string>
    <string name="use_app_links_return_summary">Use merchant App Link, instead of deeplink, when redirecting back from Venmo flow.</string>
    <string name="amex">Amex</string>
    <string name="amex_rewards_balance">Get Rewards Balance</string>
    <string name="amex_rewards_balance_summary">Fetch Amex Rewards Balance on Card Tokenization. Requires a Client Token and relevant configurations.</string>

    <!-- PayPalActivity -->
    <string name="paypal_credit_offered">Offer PayPal Credit</string>
    <string name="paypal_credit_offered_summary">Offers PayPal Credit prominently in the payment flow</string>
    <string name="paypal_useraction_commit_title">Set Useraction to Commit</string>
    <string name="paypal_useraction_commit_summary">Sets the Payment User Action to Commit for Express Checkout Transactions</string>
    <string name="paypal_address_override">Send a shipping address to PayPal</string>
    <string name="paypal_address_override_summary">Sends a shipping address as an override option to PayPal for any PayPal request</string>
    <string name="paypal_rba_metadata">RBA Metadata flow</string>
    <string name="paypal_rba_metadata_summary">Sets the recurring billing data on the PayPal Vault Request</string>
    <string name="paypal_offer_pay_later">Offer Pay Later</string>

    <!-- VenmoActivity -->
    <string name="bt_descriptor_pay_with_venmo">Venmo</string>
    <string name="autofill">Autofill</string>

    <!-- LocalPayment -->
    <string name="bt_local_payment_description">This feature uses a hard-coded sandbox tokenization key that is enabled for this local payment.</string>

    <!-- Shopping Insights -->
    <string name="insights_text_input_email">Email</string>
    <string name="insights_text_input_country_code">Country Code</string>
    <string name="insights_text_input_national_number">National Number</string>
    <string name="insights_action_button">Fetch Shopper Insights</string>
    <string name="insights_venmo_button">Venmo</string>
    <string name="insights_paypal_vault_button">PayPal Vault</string>
    <string name="insights_response_label">Response:</string>
    <string name="insights_null_switch">Null </string>

    <!-- Payment Buttons -->
    <string name="blue_button_color_option">Blue</string>
    <string name="black_button_color_option">Black</string>
    <string name="white_button_color_option">White</string>
</resources>
